diff heuristics averages steps

--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,17 +74,32 @@
     "\n",
     "- Combination of MRE and MC: Balances between subsets with few remaining elements and high coverage.\n",
     "\n",
-    "- Greedy Approximation (GA): Minimizes the cost-to-coverage ratio when selecting subsets.\n",
-    "\n",
     "- Randomized Heuristics: Selects subsets randomly or based on probabilistic considerations to explore different paths."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
+    "# state = namedtuple(\"State\", [\"taken\", \"cost\", \"heuristic\"])\n",
+    "#\n",
+    "# SETS example =\n",
+    "#   Set 0 [False  True  True  True False] Coverage: 3\n",
+    "#   Set 1 [False  True False False False] Coverage: 1\n",
+    "#   Set 2 [ True  True False False False] Coverage: 2\n",
+    "#   Set 3 [ True False False False  True] Coverage: 2\n",
+    "#   Set 4 [False  True  True  True False] Coverage: 3\n",
+    "#   Set 5 [ True False False False False] Coverage: 1\n",
+    "#   Set 6 [False False False False False] Coverage: 0\n",
+    "#   Set 7 [False False False False  True] Coverage: 1\n",
+    "#   Set 8 [False False False False False] Coverage: 0\n",
+    "#   Set 9 [False  True False False False] Coverage: 1\n",
+    "#\n",
+    "\n",
+    "\n",
     "def MRE_heuristic(state, sets):\n",
     "    \"\"\"\n",
     "    - Objective: The MRE heuristic prioritizes selecting subsets that have the\n",
@@ -93,35 +108,32 @@
     "    to being fully covered. In other words, it aims to quickly cover the remaining\n",
     "    elements.\n",
     "    - Impact: The primary goal is to minimize the number of remaining uncovered\n",
-    "    elements, which can lead to a different subset selection strategy compared to\n",
-    "    the MC heuristic.\n",
+    "    elements\n",
     "    \"\"\"\n",
     "    uncovered = reduce(\n",
     "        np.logical_or, [sets[i] for i in state.taken], np.zeros(PROBLEM_SIZE)\n",
     "    )\n",
-    "    # calculates number of uncovered elements and assign the ones wiht less\n",
-    "    # higher priority\n",
-    "    priority = -np.sum(np.logical_not(uncovered))\n",
-    "    return priority\n",
+    "\n",
+    "    heuristic = -np.sum(np.logical_not(uncovered))\n",
+    "    return heuristic\n",
     "\n",
     "\n",
     "def MC_heuristic(state, sets):\n",
     "    \"\"\"\n",
     "    - Objective: The MC heuristic prioritizes selecting subsets that cover the\n",
     "    maximum number of currently uncovered elements.\n",
-    "    - Selection Criterion: It selects subsets that contribute to covering the largest\n",
-    "    number of currently uncovered elements.\n",
-    "    - Impact: The primary goal is to maximize\n",
-    "    the coverage with each selection, potentially reducing the total number of\n",
-    "    subsets needed to cover all elements.\n",
+    "    - Selection Criterion: It\n",
+    "    selects subsets that contribute to covering the largest number of currently\n",
+    "    uncovered elements.\n",
+    "    - Impact: The primary goal is to maximize the coverage\n",
+    "    with each selection\n",
     "    \"\"\"\n",
     "    uncovered = reduce(\n",
     "        np.logical_or, [sets[i] for i in state.taken], np.zeros(PROBLEM_SIZE)\n",
     "    )\n",
-    "    # calculates number of uncovered elements and assign the ones wiht less\n",
-    "    # higher priority\n",
-    "    priority = -np.sum(uncovered)\n",
-    "    return priority\n",
+    "\n",
+    "    heuristic = -np.sum(uncovered)\n",
+    "    return heuristic\n",
     "\n",
     "\n",
     "def MRE_MC_heuristic(state, sets):\n",
@@ -131,29 +143,22 @@
     "    return (MRE_heuristic(state, sets) + MC_heuristic(state, sets)) / 2\n",
     "\n",
     "\n",
-    "def GA_heuristic(state, sets):\n",
-    "    \"\"\"\n",
-    "    Prioritize with cost/coverage ration\n",
-    "    \"\"\"\n",
-    "    uncovered = reduce(\n",
-    "        np.logical_or, [sets[i] for i in state.taken], np.zeros(PROBLEM_SIZE)\n",
-    "    )\n",
-    "\n",
-    "    # TODO\n",
-    "    # calculate the cost/coverage ratio\n",
-    "\n",
-    "\n",
-    "\n",
     "def RANDOM_heuristic(state, sets):\n",
     "    \"\"\"\n",
     "    Prioritize with a random heuristic\n",
     "    \"\"\"\n",
-    "    return random()\n"
+    "    return random()\n",
+    "\n",
+    "def COSTONLY_heuristic(state, sets):\n",
+    "    \"\"\"\n",
+    "    Prioritize only with cost\n",
+    "    \"\"\"\n",
+    "    return cost(state)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,40 +209,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set 0 [False  True False False False] Coverage: 1\n",
-      "Set 1 [False False False False False] Coverage: 0\n",
-      "Set 2 [False False False False  True] Coverage: 1\n",
-      "Set 3 [False False False  True  True] Coverage: 2\n",
-      "Set 4 [False False False False False] Coverage: 0\n",
-      "Set 5 [ True  True  True False False] Coverage: 3\n",
-      "Set 6 [False False  True False  True] Coverage: 2\n",
-      "Set 7 [False False False  True False] Coverage: 1\n",
-      "Set 8 [False  True False False  True] Coverage: 2\n",
-      "Set 9 [False False False False  True] Coverage: 1\n",
+      "Set 0 [False False False False  True] Coverage: 1\n",
+      "Set 1 [False False False  True False] Coverage: 1\n",
+      "Set 2 [ True  True False  True False] Coverage: 3\n",
+      "Set 3 [False  True False False  True] Coverage: 2\n",
+      "Set 4 [ True False False False  True] Coverage: 2\n",
+      "Set 5 [False  True False False False] Coverage: 1\n",
+      "Set 6 [False  True False  True False] Coverage: 2\n",
+      "Set 7 [ True  True False  True False] Coverage: 3\n",
+      "Set 8 [False False  True False False] Coverage: 1\n",
+      "Set 9 [ True  True  True False False] Coverage: 3\n",
       "\n",
-      "MRE: ([3, 5], 2849)\n",
-      "MC: ([5, 3], 3)\n",
-      "MRE+MC: ([3, 5], 43)\n",
-      "RANDOM: ([3, 5], 26)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb Cell 8\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mMRE+MC:\u001b[39m\u001b[39m\"\u001b[39m,astar(SETS, MRE_MC_heuristic))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mRANDOM:\u001b[39m\u001b[39m\"\u001b[39m,astar(SETS, RANDOM_heuristic))\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mGA:\u001b[39m\u001b[39m\"\u001b[39m,astar(SETS, GA_heuristic))\n",
-      "\u001b[1;32m/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb Cell 8\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m initial_state \u001b[39m=\u001b[39m State(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     taken\u001b[39m=\u001b[39m[],\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     cost\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     heuristic\u001b[39m=\u001b[39mheuristic(State(taken\u001b[39m=\u001b[39m[], cost\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, heuristic\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m), sets),\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m )\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m open_set \u001b[39m=\u001b[39m PriorityQueue()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m open_set\u001b[39m.\u001b[39mput((initial_state\u001b[39m.\u001b[39;49mcost \u001b[39m+\u001b[39;49m initial_state\u001b[39m.\u001b[39;49mheuristic, initial_state))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Initialize the closed set as an empty set\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/gabri/repos/computational-intelligence/lab1_set_covering_a_start/lab1.ipynb#X12sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m closed_set \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m()\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'NoneType'"
+      "MRE: ([0, 1, 9], 1058)\n",
+      "MC: ([2, 0, 8], 4)\n",
+      "MRE+MC: ([0, 1, 9], 109)\n",
+      "RANDOM: ([4, 8, 7], 102)\n",
+      "COSTONLY: ([0, 1, 9], 109)\n"
      ]
     }
    ],
@@ -250,7 +244,79 @@
     "print(\"MC:\",astar(SETS, MC_heuristic))\n",
     "print(\"MRE+MC:\",astar(SETS, MRE_MC_heuristic))\n",
     "print(\"RANDOM:\",astar(SETS, RANDOM_heuristic))\n",
-    "# print(\"GA:\",astar(SETS, GA_heuristic)) # TODO"
+    "print(\"COSTONLY:\",astar(SETS, COSTONLY_heuristic)) # cost only seems to be consistently achieving the same result as MRE+MC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comments\n",
+    "\n",
+    "- MRE consistently takes a lot of step, seems to make sense has it gives more priority to sets who cover a lot of already covered spaces\n",
+    "\n",
+    "- MC consistently behaves the best\n",
+    "\n",
+    "- MRE + MC behaves a bit worse than MC but a lot better than MRE\n",
+    "\n",
+    "- RANDOM seems to perform on par with MRE + MC\n",
+    "\n",
+    "- COSTOLY behaves exactly like MRE + MC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem size: 10 - Number of sets: 30 - Runs: 20\n",
+      "\n",
+      "MRE: 1058.0\n",
+      "MC: 4.0\n",
+      "MRE+MC: 109.0\n",
+      "RANDOM: 106.35\n",
+      "COSTONLY: 109.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "MRE_steps = []\n",
+    "MC_steps = []\n",
+    "MRE_MC_steps = []\n",
+    "RANDOM_steps = []\n",
+    "COSTONLY_steps = []\n",
+    "\n",
+    "N_RUNS = 20\n",
+    "\n",
+    "problem_size = 10  # dimension of the finite set U\n",
+    "number_set = 30  # number of subsets in the collection S\n",
+    "\n",
+    "print(f\"Problem size: {problem_size} - Number of sets: {number_set} - Runs: {N_RUNS}\")\n",
+    "\n",
+    "\n",
+    "for _ in range(N_RUNS):\n",
+    "    sets = tuple(\n",
+    "        np.array([random() < 0.3 for i in range(problem_size)])\n",
+    "        for j in range(number_set)\n",
+    "    )\n",
+    "\n",
+    "    MRE_steps.append(astar(SETS, MRE_heuristic)[1])\n",
+    "    MC_steps.append(astar(SETS, MC_heuristic)[1])\n",
+    "    MRE_MC_steps.append(astar(SETS, MRE_MC_heuristic)[1])\n",
+    "    RANDOM_steps.append(astar(SETS, RANDOM_heuristic)[1])\n",
+    "    COSTONLY_steps.append(astar(SETS, COSTONLY_heuristic)[1])\n",
+    "\n",
+    "\n",
+    "print()\n",
+    "print(\"MRE:\", np.mean(MRE_steps))\n",
+    "print(\"MC:\", np.mean(MC_steps))\n",
+    "print(\"MRE+MC:\", np.mean(MRE_MC_steps))\n",
+    "print(\"RANDOM:\", np.mean(RANDOM_steps))\n",
+    "print(\"COSTONLY:\", np.mean(COSTONLY_steps))\n"
    ]
   }
  ],
