--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,29 +209,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set 0 [False False False False  True] Coverage: 1\n",
-      "Set 1 [False False False  True False] Coverage: 1\n",
-      "Set 2 [ True  True False  True False] Coverage: 3\n",
-      "Set 3 [False  True False False  True] Coverage: 2\n",
-      "Set 4 [ True False False False  True] Coverage: 2\n",
-      "Set 5 [False  True False False False] Coverage: 1\n",
-      "Set 6 [False  True False  True False] Coverage: 2\n",
-      "Set 7 [ True  True False  True False] Coverage: 3\n",
-      "Set 8 [False False  True False False] Coverage: 1\n",
-      "Set 9 [ True  True  True False False] Coverage: 3\n",
+      "Set 0 [ True  True False False False] Coverage: 2\n",
+      "Set 1 [ True  True False  True  True] Coverage: 4\n",
+      "Set 2 [ True False False False False] Coverage: 1\n",
+      "Set 3 [False  True False False False] Coverage: 1\n",
+      "Set 4 [False False  True  True False] Coverage: 2\n",
+      "Set 5 [False False  True False False] Coverage: 1\n",
+      "Set 6 [ True  True False  True  True] Coverage: 4\n",
+      "Set 7 [ True False False False  True] Coverage: 2\n",
+      "Set 8 [ True  True False False False] Coverage: 2\n",
+      "Set 9 [ True  True False False False] Coverage: 2\n",
       "\n",
-      "MRE: ([0, 1, 9], 1058)\n",
-      "MC: ([2, 0, 8], 4)\n",
-      "MRE+MC: ([0, 1, 9], 109)\n",
-      "RANDOM: ([4, 8, 7], 102)\n",
-      "COSTONLY: ([0, 1, 9], 109)\n"
+      "MRE: ([1, 4], 560)\n",
+      "MC: ([1, 4], 3)\n",
+      "MRE+MC: ([1, 4], 24)\n",
+      "RANDOM: ([6, 4], 20)\n",
+      "COSTONLY: ([1, 4], 24)\n"
      ]
     }
    ],
@@ -261,62 +261,61 @@
     "\n",
     "- RANDOM seems to perform on par with MRE + MC\n",
     "\n",
-    "- COSTOLY behaves exactly like MRE + MC"
+    "- COSTONLY behaves exactly like MRE + MC, maybe because both are trying to maximize the coverage of elements (by minimizing the number of uncovered elements) and the cost function itself already captures the essence of minimizing the number of selected subsets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AVG Steps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem size: 10 - Number of sets: 30 - Runs: 20\n",
-      "\n",
-      "MRE: 1058.0\n",
-      "MC: 4.0\n",
-      "MRE+MC: 109.0\n",
-      "RANDOM: 106.35\n",
-      "COSTONLY: 109.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "MRE_steps = []\n",
-    "MC_steps = []\n",
-    "MRE_MC_steps = []\n",
-    "RANDOM_steps = []\n",
-    "COSTONLY_steps = []\n",
+    "steps_MRE = []\n",
+    "steps_MC = []\n",
+    "steps_MRE_MC = []\n",
+    "steps_RANDOM = []\n",
+    "steps_COSTONLY = []\n",
     "\n",
     "N_RUNS = 20\n",
     "\n",
-    "problem_size = 10  # dimension of the finite set U\n",
-    "number_set = 30  # number of subsets in the collection S\n",
+    "PROBLEM_SIZE = 10  # dimension of the finite set U\n",
+    "NUMBER_SET = 30  # number of subsets in the collection S\n",
     "\n",
-    "print(f\"Problem size: {problem_size} - Number of sets: {number_set} - Runs: {N_RUNS}\")\n",
-    "\n",
+    "print(f\"Problem size: {PROBLEM_SIZE} - Number of sets: {NUMBER_SET}\")\n",
     "\n",
     "for _ in range(N_RUNS):\n",
     "    sets = tuple(\n",
-    "        np.array([random() < 0.3 for i in range(problem_size)])\n",
-    "        for j in range(number_set)\n",
+    "        np.array([random() < 0.3 for i in range(PROBLEM_SIZE)])\n",
+    "        for j in range(NUMBER_SET)\n",
     "    )\n",
     "\n",
-    "    MRE_steps.append(astar(SETS, MRE_heuristic)[1])\n",
-    "    MC_steps.append(astar(SETS, MC_heuristic)[1])\n",
-    "    MRE_MC_steps.append(astar(SETS, MRE_MC_heuristic)[1])\n",
-    "    RANDOM_steps.append(astar(SETS, RANDOM_heuristic)[1])\n",
-    "    COSTONLY_steps.append(astar(SETS, COSTONLY_heuristic)[1])\n",
+    "    if(not goal_check(State(range(NUMBER_SET), 0, 0), sets)):\n",
+    "        print(\"Problem not solvable\")\n",
+    "        break\n",
+    "\n",
+    "    steps_MRE.append(astar(sets, MRE_heuristic)[1])\n",
+    "    steps_MC.append(astar(sets, MC_heuristic)[1])\n",
+    "    steps_MRE_MC.append(astar(sets, MRE_MC_heuristic)[1])\n",
+    "    steps_RANDOM.append(astar(sets, RANDOM_heuristic)[1])\n",
+    "    steps_COSTONLY.append(astar(sets, COSTONLY_heuristic)[1])\n",
+    "\n",
+    "    print(f\"Run {_+1} completed\")\n",
     "\n",
     "\n",
-    "print()\n",
-    "print(\"MRE:\", np.mean(MRE_steps))\n",
-    "print(\"MC:\", np.mean(MC_steps))\n",
-    "print(\"MRE+MC:\", np.mean(MRE_MC_steps))\n",
-    "print(\"RANDOM:\", np.mean(RANDOM_steps))\n",
-    "print(\"COSTONLY:\", np.mean(COSTONLY_steps))\n"
+    "\n",
+    "print(f\"Average number of steps over {N_RUNS} runs:\")\n",
+    "print(\"- MRE:\", np.mean(steps_MRE))\n",
+    "print(\"- MC:\", np.mean(steps_MC))\n",
+    "print(\"- MRE+MC:\", np.mean(steps_MRE_MC))\n",
+    "print(\"- RANDOM:\", np.mean(steps_RANDOM))\n",
+    "print(\"- COSTONLY:\", np.mean(steps_COSTONLY))\n"
    ]
   }
  ],
