--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -12,7 +12,7 @@
         "from random import random\n",
         "from functools import reduce\n",
         "from collections import namedtuple\n",
-        "from queue import PriorityQueue"
+        "from queue import PriorityQueue\n"
       ]
     },
     {
@@ -54,7 +54,7 @@
         "\n",
         "# assert generated problem is solvable, ie the goal check of a stete with all\n",
         "# sets taken is true\n",
-        "assert goal_check(State(range(NUMBER_SET), 0, 0), SETS)"
+        "assert goal_check(State(range(NUMBER_SET), 0, 0), SETS)\n"
       ]
     },
     {
@@ -84,7 +84,7 @@
         "\n",
         "- Combination of MRE and MC: Balances between subsets with few remaining elements and high coverage.\n",
         "\n",
-        "- Randomized Heuristics: Selects subsets randomly or based on probabilistic considerations to explore different paths."
+        "- Randomized Heuristics: Selects subsets randomly or based on probabilistic considerations to explore different paths.\n"
       ]
     },
     {
@@ -161,6 +161,7 @@
         "    \"\"\"\n",
         "    return random()\n",
         "\n",
+        "\n",
         "def COSTONLY_heuristic(state, sets):\n",
         "    \"\"\"\n",
         "    Prioritize only with cost\n",
@@ -189,17 +190,17 @@
         "    # Initialize the closed set as an empty set\n",
         "    closed_set = set()\n",
         "\n",
-        "    checked_states=0\n",
+        "    checked_states = 0\n",
         "\n",
         "    while not open_set.empty():\n",
         "        # Get the state with the lowest f score from the priority queue\n",
         "        _, current_state = open_set.get()\n",
         "\n",
-        "        checked_states+=1\n",
+        "        checked_states += 1\n",
         "\n",
         "        # If the current state is a goal state, return the solution\n",
         "        if goal_check(current_state, sets):\n",
-        "            return current_state.taken,checked_states\n",
+        "            return current_state.taken, checked_states\n",
         "\n",
         "        # Add the current state to the closed set\n",
         "        closed_set.add(tuple(current_state.taken))\n",
@@ -225,16 +226,16 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "LwP1SGP3vWZo",
-        "outputId": "eaa8822e-5f80-4212-da9a-3bf53bc3b9d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LwP1SGP3vWZo",
+        "outputId": "eaa8822e-5f80-4212-da9a-3bf53bc3b9d0"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Set 0 [False False False  True  True] Coverage: 2\n",
             "Set 1 [False  True False False False] Coverage: 1\n",
@@ -257,14 +258,16 @@
       ],
       "source": [
         "for i in range(NUMBER_SET):\n",
-        "    print(\"Set\",i,SETS[i],\"Coverage:\",np.sum(SETS[i]))\n",
+        "    print(\"Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
         "\n",
         "print()\n",
-        "print(\"MRE:\",astar(SETS, MRE_heuristic))\n",
-        "print(\"MC:\",astar(SETS, MC_heuristic))\n",
-        "print(\"MRE+MC:\",astar(SETS, MRE_MC_heuristic))\n",
-        "print(\"RANDOM:\",astar(SETS, RANDOM_heuristic))\n",
-        "print(\"COSTONLY:\",astar(SETS, COSTONLY_heuristic)) # cost only seems to be consistently achieving the same result as MRE+MC"
+        "print(\"MRE:\", astar(SETS, MRE_heuristic))\n",
+        "print(\"MC:\", astar(SETS, MC_heuristic))\n",
+        "print(\"MRE+MC:\", astar(SETS, MRE_MC_heuristic))\n",
+        "print(\"RANDOM:\", astar(SETS, RANDOM_heuristic))\n",
+        "print(\n",
+        "    \"COSTONLY:\", astar(SETS, COSTONLY_heuristic)\n",
+        ")  # cost only seems to be consistently achieving the same result as MRE+MC\n"
       ]
     },
     {
@@ -283,7 +286,7 @@
         "\n",
         "- RANDOM seems to perform on par with MRE + MC\n",
         "\n",
-        "- COSTONLY behaves exactly like MRE + MC, maybe because both are trying to maximize the coverage of elements (by minimizing the number of uncovered elements) and the cost function itself already captures the essence of minimizing the number of selected subsets."
+        "- COSTONLY behaves exactly like MRE + MC, maybe because both are trying to maximize the coverage of elements (by minimizing the number of uncovered elements) and the cost function itself already captures the essence of minimizing the number of selected subsets.\n"
       ]
     },
     {
@@ -292,23 +295,23 @@
         "id": "7G4VcV_XvWZs"
       },
       "source": [
-        "# AVG Steps"
+        "# AVG Steps\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 9,
       "metadata": {
-        "id": "CraiNkyivWZs",
-        "outputId": "84203fb7-2683-4bee-e18f-2f0eeda57bd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CraiNkyivWZs",
+        "outputId": "84203fb7-2683-4bee-e18f-2f0eeda57bd7"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Problem size: 5 - Number of sets: 10\n",
             "Run 1 completed\n",
@@ -316,27 +319,27 @@
             "Run 3 completed\n",
             "Run 4 completed\n",
             "Run 5 completed\n",
-            "Run 6 not solvable\n",
+            "Run 6 completed\n",
             "Run 7 completed\n",
-            "Run 8 completed\n",
-            "Run 9 not solvable\n",
-            "Run 10 not solvable\n",
-            "Run 11 completed\n",
+            "Run 8 not solvable\n",
+            "Run 9 completed\n",
+            "Run 10 completed\n",
+            "Run 11 not solvable\n",
             "Run 12 completed\n",
             "Run 13 completed\n",
             "Run 14 completed\n",
             "Run 15 completed\n",
             "Run 16 completed\n",
             "Run 17 completed\n",
-            "Run 18 completed\n",
+            "Run 18 not solvable\n",
             "Run 19 completed\n",
             "Run 20 completed\n",
             "Average number of steps over 20 runs:\n",
-            "- MRE: 2140.823529411765\n",
-            "- MC: 3.411764705882353\n",
-            "- MRE+MC: 85.0\n",
-            "- RANDOM: 50.35294117647059\n",
-            "- COSTONLY: 85.0\n"
+            "MRE: 2599.59\n",
+            "MC: 3.47\n",
+            "MRE+MC: 84.41\n",
+            "RANDOM: 79.06\n",
+            "COSTONLY: 84.41\n"
           ]
         }
       ],
@@ -360,28 +363,30 @@
         "        for j in range(NUMBER_SET)\n",
         "    )\n",
         "\n",
-        "    if(goal_check(State(range(NUMBER_SET), 0, 0), sets)):\n",
-        "      steps_MRE.append(astar(sets, MRE_heuristic)[1])\n",
-        "      steps_MC.append(astar(sets, MC_heuristic)[1])\n",
-        "      steps_MRE_MC.append(astar(sets, MRE_MC_heuristic)[1])\n",
-        "      steps_RANDOM.append(astar(sets, RANDOM_heuristic)[1])\n",
-        "      steps_COSTONLY.append(astar(sets, COSTONLY_heuristic)[1])\n",
-        "      print(f\"Run {_+1} completed\")\n",
+        "    if goal_check(State(range(NUMBER_SET), 0, 0), sets):\n",
+        "        steps_MRE.append(astar(sets, MRE_heuristic)[1])\n",
+        "        steps_MC.append(astar(sets, MC_heuristic)[1])\n",
+        "        steps_MRE_MC.append(astar(sets, MRE_MC_heuristic)[1])\n",
+        "        steps_RANDOM.append(astar(sets, RANDOM_heuristic)[1])\n",
+        "        steps_COSTONLY.append(astar(sets, COSTONLY_heuristic)[1])\n",
+        "        print(f\"Run {_+1} completed\")\n",
         "    else:\n",
-        "      print(f\"Run {_+1} not solvable\")\n",
-        "\n",
+        "        print(f\"Run {_+1} not solvable\")\n",
         "\n",
         "\n",
         "print(f\"Average number of steps over {N_RUNS} runs:\")\n",
-        "print(\"- MRE:\", np.mean(steps_MRE))\n",
-        "print(\"- MC:\", np.mean(steps_MC))\n",
-        "print(\"- MRE+MC:\", np.mean(steps_MRE_MC))\n",
-        "print(\"- RANDOM:\", np.mean(steps_RANDOM))\n",
-        "print(\"- COSTONLY:\", np.mean(steps_COSTONLY))\n"
+        "print(f\"MRE: {sum(steps_MRE)/len(steps_MRE):.2f}\")\n",
+        "print(f\"MC: {sum(steps_MC)/len(steps_MC):.2f}\")\n",
+        "print(f\"MRE+MC: {sum(steps_MRE_MC)/len(steps_MRE_MC):.2f}\")\n",
+        "print(f\"RANDOM: {sum(steps_RANDOM)/len(steps_RANDOM):.2f}\")\n",
+        "print(f\"COSTONLY: {sum(steps_COSTONLY)/len(steps_COSTONLY):.2f}\")\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": ".envCI",
       "language": "python",
@@ -398,9 +403,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.12"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
